# c_footswitch

./: .gitignore  Makefile  meson.build
footswitch/: common.c  common.h  debug.c  debug.h  def.h  exports.h  footswitch.c  footswitch.h  meson.build  module.c  module.h
footswitch-test/: footswitch-test.c  meson.build
submodules/: meson.build
